--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <div id="nav">
 	<% if current_user %>
+		<%= link_to "My Graph", :graph %>
 		<%= link_to "Edit Profile - #{current_user.username}", edit_user_path(current_user.id) %>
 		<%= link_to "Logout", :logout %>
 	<% else %>
