--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -1,7 +1,14 @@
 <h1>This is your social graph <%= current_user.username %>, enjoy.</h1>
-<p>Datapull: <%= :datapull %></p>
 
 <div id="chart"></div>
+<h1><%= @name %></h1>
+<p>Course <%= @course %>, year <%= @year %></p>
+<p>Lives at <%= @living_group %></p>
+<ol>
+<% @likes.each do |like| %>
+  <li>like</li>
+<% end %>
+</ol>
 <script type="text/javascript">
 
 var w = 960,
