--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -4,6 +4,12 @@
 <h1><%= @name %></h1>
 <p>Course <%= @course %>, year <%= @year %></p>
 <p>Lives at <%= @living_group %></p>
+<h3>Likes:</h3>
+<ul>
+<% @likes.each do |like| %>
+  <li><%= like %></li>
+<% end %>
+</ul>
 <script type="text/javascript">
 
 var w = 960,
