--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -19,9 +19,10 @@ var w = 960,
     root,
     path = "jhaip";
 
-var force = d3.layout.force()
+var force = d3.layout.force() 
     .on("tick", tick)
-    .size([w, h]);
+    .size([w, h])
+    .linkDistance(50);
 
 var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
@@ -69,11 +70,11 @@ function update() {
       .attr("class", "node")
       .attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; })
-      .attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
+      .attr("r", function(d) { return 40+"px"; })
       .style("fill", color)
       .on("click", click)
       .call(force.drag)
-      .append("svg:title")
+      .append("svg:text")
       .text(function(d) { return d.name });
 
   // Exit any old nodes.
