--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#chart {
+	width: 960px;
+	height: 500px;
+	background: #EEE;
+}
 circle.node {
   cursor: pointer;
   stroke: #3182bd;
