trying to seperate graph and details

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,11 @@
  *= require_self
  *= require_tree .
  */
+
+#bodywrap {
+	width: 960px;
+	margin: 0 auto;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
