--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -53,7 +53,7 @@ function path_update(new_path) {
   }
 }
 
-path_update([{type:"person",name="jhaip"}]);
+path_update([{type:"person",name:"jhaip"}]);
 
 
 function update() {
