--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div id="bodywrap">
+	
 <div id="nav">
 	<% if current_user %>
 		<%= link_to "My Graph", :graph %>
@@ -23,6 +25,7 @@
 	<p id="alert"><%= alert %></p>
 </div>
 <%= yield %>
+</div>
 
 </body>
 </html>
