--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,19 @@
 	width: 960px;
 	margin: 0 auto;
 	height: 100%;
-	margin: 0;
 	padding: 0;
+}
+header {
+	width: 100%;
+	height: 50px;
+}
+
+header #logo {
+	font-size: 30px;
+	font-weight: 900px;
+	color: #BBB;
+	float: left;
+}
+header #nav {
+	float: right;
 }
