--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -1,5 +1,3 @@
-<h1>This is your social graph <%= current_user.username %>, enjoy.</h1>
-
 <div id="chart"></div>
 <h1 id="path">Name Path</h1>
 <hr>
@@ -34,9 +32,17 @@ var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
+function path_to_text(p) {
+  str = "";
+  for (var i=0; i<p.length; i+=1) {
+    str += p[i].name+" / ";
+  }
+  return str;
+}
+
 function path_update(new_path) {
   path = new_path;
-  d3.select("#path").text(path);
+  d3.select("#path").text(path_to_text(path));
   last = path[path.length-1];
   console.log("new path");
   console.log(path);
