--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 <body>
 
 <div id="bodywrap">
-	
+
+<header>
+<h1 id="logo">6 Away</h1>
 <div id="nav">
 	<% if current_user %>
 		<%= link_to "My Graph", :graph %>
@@ -20,6 +22,7 @@
 		<%= link_to "Login", :login %>
 	<% end %>
 </div>
+<header>
 <div>
 	<p id="notice"><%= notice %></p>
 	<p id="alert"><%= alert %></p>
