--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 		<%= link_to "Login", :login %>
 	<% end %>
 </div>
-<header>
+</header>
 <div>
 	<p id="notice"><%= notice %></p>
 	<p id="alert"><%= alert %></p>
