a few more layout stuffs

--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -4,8 +4,14 @@
 
 #chart {
 	width: 960px;
-	height: 500px;
+	height: 400px;
 	background: #EEE;
+	border-top: 2px solid black;
+}
+
+.hr {
+	border-top: 2px solid black;
+	width: 100%;
 }
 circle.node {
   cursor: pointer;
