--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -1,6 +1,6 @@
 <div id="chart"></div>
 <h1 id="path">Name Path</h1>
-<hr>
+<div class="hr"></div>
 <div id="details">
   <h1>Detail title</h1>
   <div id="person_info"></div>
@@ -16,7 +16,7 @@
 <script type="text/javascript">
 
 var w = 960,
-    h = 500,
+    h = 400,
     node,
     link,
     root,
