--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,11 +20,13 @@
 }
 header {
 	width: 100%;
-	height: 50px;
+	height: 40px;
 }
 
 header #logo {
-	font-size: 24px;
+	font-style: italic;
+	font-family:"Times New Roman", Times, serif;
+	font-size: 20px;
 	color: #BBB;
 	float: left;
 	line-height: 110%;
