more css colors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,11 @@
  *= require_tree .
  */
 
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #333;
+}
+
 #bodywrap {
 	width: 960px;
 	margin: 0 auto;
@@ -26,8 +31,7 @@ header {
 header #logo {
 	font-style: italic;
 	font-family:"Times New Roman", Times, serif;
-	font-size: 20px;
-	color: #BBB;
+	font-size: 24px;
 	float: left;
 	line-height: 110%;
 }
