--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -6,11 +6,11 @@
 	width: 960px;
 	height: 400px;
 	background: #EEE;
-	border-top: 2px solid black;
+	border-top: 2px solid #333;
 }
 
 .hr {
-	border-top: 2px solid black;
+	border-top: 2px solid #333;
 	width: 100%;
 }
 circle.node {
