--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -2,16 +2,8 @@
 <h1 id="path">Name Path</h1>
 <div class="hr"></div>
 <div id="details">
-  <h1>Detail title</h1>
-  <div id="person_info"></div>
-<p>Course <%= @course %>, year <%= @year %></p>
-<p>Lives at <%= @living_group %></p>
-<h3>Likes:</h3>
-<ul>
-<% @likes.each do |like| %>
-  <li><%= like %></li>
-<% end %>
-</ul>
+  <h1 id="detail_title">Detail title</h1>
+  <div id="inside"></div>
 </div>
 <script type="text/javascript">
 
@@ -54,6 +46,12 @@ function path_update(new_path) {
       details = json.details;
       console.log(root);
       console.log(details);
+
+      d3.select("#detail_title").text(details.name);
+      var inside = d3.select("#inside");
+      inside.append("p").text("Course "+details.course+", Year "+details.year);
+      inside.append("p").text("Lives at "+details.living_group);
+
       update();
     });
   }
