email username fixes

--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,10 +1,10 @@
 UserMailer#activation_needed_email
 
-Welcome to example.com, <%= @user.username %>
+Welcome to example.com, <%= @user.email %>
 ===============================================
      
 You have successfully signed up to example.com,
-your username is: <%= @user.username %>.
+your username is: <%= @user.email %>.
     
 To login to the site, just follow this link: <%= @url %>.
      
