--- a/app/views/user_mailer/activation_success_email.text.erb
+++ b/app/views/user_mailer/activation_success_email.text.erb
@@ -1,10 +1,10 @@
 UserMailer#activation_success_email
 
-Congratz, <%= @user.username %>
+Congratz, <%= @user.email %>
 ===============================================
      
 You have successfully activated your example.com account,
-your username is: <%= @user.username %>.
+your username is: <%= @user.email %>.
      
 To login to the site, just follow this link: <%= @url %>.
      
