--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Tutorial</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "application", "http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css", :media => "all" %>
+  <%= javascript_include_tag "application", "http://code.jquery.com/jquery-1.9.0.js", "http://code.jquery.com/ui/1.10.0/jquery-ui.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
