--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,9 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+  <div class="ui-widget">
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.text_field :email %>
+    </div>
   </div>
   <div class="field">
     <%= f.label :password %><br />
