--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div id="bodywrap">
 
 <header>
-<h1 id="logo">6 Away</h1>
+<h1 id="logo"><%= link_to "6 Away" root_url %></h1>
 <div id="nav">
 	<% if current_user %>
 		<%= link_to "My Graph", :graph %>
