--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,11 +1,10 @@
-UserMailer#activation_needed_email
-
-Welcome to example.com, <%= @user.email %>
-===============================================
-     
-You have successfully signed up to example.com,
-your username is: <%= @user.email %>.
+Welcome, <%= @user.email %>!
     
-To login to the site, just follow this link: <%= @url %>.
+To activate your 6 Away account and start meeting new people follow this link:
+
+<%= @url %>
      
-Thanks for joining and have a great day!
+A world of exciting people await you!
+
+
+- The 6 Away Team -
