--- a/app/views/user_mailer/activation_success_email.text.erb
+++ b/app/views/user_mailer/activation_success_email.text.erb
@@ -1,11 +1,8 @@
-UserMailer#activation_success_email
+It's a happy day for us, <%= @user.email %>!
 
-Congratz, <%= @user.email %>
-===============================================
-     
-You have successfully activated your example.com account,
-your username is: <%= @user.email %>.
-     
-To login to the site, just follow this link: <%= @url %>.
-     
-Thanks for joining and have a great day!
+You have successfully activated your 6 Away account.  To login to the site, just follow this link: <%= @url %>.
+
+Start exploring now!
+
+
+- The 6 Away Team -
