pushing to database

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -57,7 +57,7 @@ function path_update(new_path) {
   }
 }
 
-path_update([{type:"person",name:"jhaip"}]);
+path_update([{type:"person",name:"<%= @athena_name %>"}]);
 
 
 function update() {
