--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,8 @@
 Hello, <%= @user.email %>
-===============================================
  
-You have requested to reset your password.
+You have requested to reset your password.  To choose a new password, just follow this link: <%= @url %>.
+ 
+If you don't want to change your password or didn't request to reset it, just ignore this email!
 
-To choose a new password, just follow this link: <%= @url %>.
- 
-Have a great day!
+
+- The 6 Away Team -
