--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -34,5 +34,8 @@
     <%= submit_tag("Submit") %>
   </div>
 
+  <h3>Reset Your Password</h3>
+  <%= link_to "Click here to reset your password", edit_user_path(current_user.id) %>
+
 <% end %>
 
