--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <div id="nav">
 	<% if current_user %>
 		<%= link_to "My Graph", :graph %>
-		<%= link_to "Edit Profile - #{current_user.email}", edit_user_path(current_user.id) %>
+		<%= link_to "Edit Profile - #{current_user.email}", :profile %>
 		<%= link_to "Logout", :logout %>
 	<% else %>
 		<%= link_to "Register", new_user_path %> |
