handling 500 ajax calls

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -33,6 +33,11 @@ function path_to_text(p) {
 }
 
 function person_me_callback(json) {
+  if (json == null) {
+    alert("Error when pulling data");
+    path_update([{type:"person",name:"<%= @athena_name %>"}]);
+    return;
+  }
   console.log("json returned");
   root = json.graph;
   details = json.details;
