forgot to add it to both options

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -63,6 +63,11 @@ function person_me_callback(json) {
 }
 
 function person_other_callback(json) {
+  if (json == null) {
+    alert("Error when pulling data");
+    path_update([{type:"person",name:"<%= @athena_name %>"}]);
+    return;
+  }
   console.log("json returned");
   root = json.graph;
   details = json.details;
