better homepage and reset password link fix

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,2 @@
-<h1>6 Away</h1>
-<p>Boom. Cross-universe compatible.</p>
+<img src="http://placekitten.com/g/960/400" alt="cat">
+<h1>You are awesome!</h1>
