--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <h3>Reset Your Password</h3>
-  <%= link_to "Click here to reset your password", edit_user_path(current_user.id) %>
+  <%= link_to "Click here to reset your password", password_resets_path(current_user.id) %>
 
 <% end %>
 
