--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #333;
+	line-height: 130%;
 }
 
 #bodywrap {
