details update and reset password fix

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -44,18 +44,11 @@ function person_me_callback(json) {
   console.log(root);
   console.log(details);
 
-  d3.select("#detail_title").text(details.name);
-  var inside = d3.select("#inside");
-  inside.append("h1").text("IT'S MEEEEE");
-  inside.append("p").text("Course "+details.course+", Year "+details.year);
-  inside.append("p").text("Lives at "+details.living_group);
-  inside.append("h3").text("Likes:");
-  if (details.likes && details.likes[0] != "empty") {
-    inside.append("ul").classed("likes_list", true);
-    var likes_list = d3.select(".likes_list");
-    for (var i=0; i < details.likes.length; i+=1) {
-      likes_list.append("li").text(details.likes[i]);
-    }
+  $("#detail_title").text(details.name);
+  $("#inside").append("<h1>Categories:</h1>");
+  l = $("#inside").append("<ul></ul>");
+  for (var i=0; i < root.children.length; i+=1) {
+    l.append("<li>"+root.children[i].name+"</li>");
   }
 
   update();
