--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ header {
 	border-bottom: 2px solid #333;
 }
 
-header #logo {
+header #logo a {
 	text-decoration: none;
 	font-style: italic;
 	font-family:"Times New Roman", Times, serif;
