--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -197,24 +197,23 @@ function update() {
   // Exit any old nodes.
   node.exit().remove();
 
-/*
   // Update the labels…
-  node = vis.selectAll("text.label")
+  labels = vis.selectAll("text.label")
       .data(nodes, function(d) { return d.name; });
 
   // Enter any new labels.
-  node.enter().append("svg:text")
+  labels.enter().append("svg:text")
       .text(function(d) {return d.name})
       .attr("class", "label")
       .attr("x", function(d) { return d.x; })
       .attr("y", function(d) { return d.y; })
       .attr("font-family", "sans-serif")
       .attr("font-size", "11px")
-      .attr("fill", "red");
+      .attr("fill", "black");
 
   // Exit any old nodes.
-  node.exit().remove();
-  */
+  labels.exit().remove();
+
 }
 
 function tick() {
