--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -191,12 +191,21 @@ function update() {
       .style("fill", color)
       .on("click", click)
       .call(force.drag)
-      .append("svg:title")
-      .text(function(d) { return d.name });
+      .append("svg:text")
+      .text(function(d) {return d.name})
+      .attr("class", "label")
+      .attr("x", function(d) { return d.x; })
+      .attr("y", function(d) { return d.y; })
+      .attr("font-family", "sans-serif")
+      .attr("font-size", "11px")
+      .attr("fill", "black");
+      //.append("svg:title")
+      //.text(function(d) { return d.name });
 
   // Exit any old nodes.
   node.exit().remove();
 
+/*
   // Update the labels…
   labels = vis.selectAll("text.label")
       .data(nodes, function(d) { return d.name; });
@@ -213,7 +222,7 @@ function update() {
 
   // Exit any old nodes.
   labels.exit().remove();
-
+*/
 }
 
 function tick() {
