--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -52,7 +52,7 @@ var force = d3.layout.force()
     .on("tick", tick)
     .size([w, h])
     .linkDistance(100)
-    .charge(-300);
+    .charge(-400);
 
 var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
@@ -215,21 +215,13 @@ function update() {
       .style("fill", color)
       .on("click", click)
       .call(force.drag)
-      .append("svg:text")
-      .text(function(d) {return d.name})
-      .attr("class", "label")
-      .attr("x", function(d) { return d.x; })
-      .attr("y", function(d) { return d.y; })
-      .attr("font-family", "sans-serif")
-      .attr("font-size", "11px")
-      .attr("fill", "black");
       //.append("svg:title")
       //.text(function(d) { return d.name });
 
   // Exit any old nodes.
   node.exit().remove();
 
-/*
+
   // Update the labels…
   labels = vis.selectAll("text.label")
       .data(nodes, function(d) { return d.name; });
@@ -246,7 +238,7 @@ function update() {
 
   // Exit any old nodes.
   labels.exit().remove();
-*/
+
 }
 
 function tick() {
@@ -257,6 +249,9 @@ function tick() {
 
   node.attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; });
+
+  labels.attr("x", function(d) { return d.x; })
+        .attr("y", function(d) { return d.y; });
 }
 
 // Color leaf nodes orange, and packages white or blue.
