--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -232,9 +232,11 @@ function update() {
       .attr("class", "label")
       .attr("x", function(d) { return d.x; })
       .attr("y", function(d) { return d.y; })
-      .attr("font-family", "sans-serif")
-      .attr("font-size", "11px")
+      .attr("text-anchor", "middle" )
+      .attr("font-family", "Arial, Helvetica, sans-serif")
+      .attr("font-size", "16px")
       .attr("fill", "black");
+
 
   // Exit any old nodes.
   labels.exit().remove();
@@ -274,6 +276,13 @@ function click(d) {
     d._children = null;
   }
   */
+  for (int i=0; i<path.length; i+=1) {
+    if (d.id == path[i].id) {
+      path_update(path.slice(0,i+1));
+      update();
+      return;
+    }
+  }
   if (d.type == "category") {
     var p = path;
     p.push({type:"category",id:d.id,name:d.name});
