--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -52,8 +52,8 @@ var force = d3.layout.force()
     .on("tick", tick)
     .size([w, h])
     .linkDistance(100)
-    .charge(-1500)
-    .linkStrength(function(x) { return x.weight * 10 });
+    .charge(-1000)
+    .linkStrength(function(x) { return x.weight });
 
 var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
