--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -53,7 +53,14 @@ var force = d3.layout.force()
     .size([w, h])
     .linkDistance(100)
     .charge(-1000);
-    //.linkStrength(function(x) { return x.weight });
+    .linkStrength(function(x) { 
+      for (var i=0; i<path.length; i+=1) {
+        if (d.id == path[i].id) {
+          return 1;
+        }
+      }
+      return 0.5;
+    });
 
 var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
