--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -52,7 +52,7 @@ var force = d3.layout.force()
     .on("tick", tick)
     .size([w, h])
     .linkDistance(100)
-    .charge(-1000);
+    .charge(-1000)
     .linkStrength(function(x) { 
       for (var i=0; i<path.length; i+=1) {
         if (d.id == path[i].id) {
