--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -50,17 +50,17 @@ var w = 960,
 
 var force = d3.layout.force() 
     .on("tick", tick)
-    .size([w, h])
-    .linkDistance(100)
-    .charge(-1000)
-    .linkStrength(function(d) { 
-      for (var i=0; i<path.length; i+=1) {
-        if (d.id == path[i].id) {
-          return 1;
-        }
-      }
-      return 0.5;
-    });
+    .size([w, h]);
+    //.linkDistance(100)
+    //.charge(-1000)
+    //.linkStrength(function(d) { 
+    //  for (var i=0; i<path.length; i+=1) {
+    //    if (d.id == path[i].id) {
+    //      return 1;
+    //    }
+    //  }
+    //  return 0.5;
+    //});
 
 var vis = d3.select("#chart").append("svg:svg")
     .attr("width", w)
@@ -227,7 +227,7 @@ function update() {
   // Exit any old nodes.
   node.exit().remove();
 
-
+/*
   // Update the labels…
   labels = vis.selectAll("text.label")
       .data(nodes, function(d) { return d.id; });
@@ -246,7 +246,7 @@ function update() {
 
   // Exit any old nodes.
   labels.exit().remove();
-
+*/
 }
 
 function tick() {
@@ -258,8 +258,8 @@ function tick() {
   node.attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; });
 
-  labels.attr("x", function(d) { return d.x; })
-        .attr("y", function(d) { return d.y; });
+  //labels.attr("x", function(d) { return d.x; })
+  //      .attr("y", function(d) { return d.y; });
 }
 
 // Color leaf nodes orange, and packages white or blue.
