--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -187,6 +187,7 @@ function update() {
   console.log("updating");
   var nodes = flatten(root),
       links = d3.layout.tree().links(nodes);
+  console.log(nodes);
 
   // Restart the force layout.
   force
