--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -220,10 +220,11 @@ function update() {
       .attr("class", "node")
       .attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; })
-      .attr("r", function(d) { return 10+"px"; })
+      .attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
       .style("fill", color)
       .on("click", click)
-      .call(force.drag)
+      .call(force.drag);
+      //.attr("r", function(d) { return 10+"px"; })
 
   // Exit any old nodes.
   node.exit().remove();
@@ -304,7 +305,6 @@ function click(d) {
     p.push({type:"person",id:d.id,name:d.name});
     path_update(p);
   }
-  update();
 }
 
 // Returns a list of all nodes under the root.
