--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -323,7 +323,10 @@ function flatten(root) {
 
   function recurse(node) {
     if (node.children) node.children.forEach(recurse);
-    if (!node.id) node.id = ++i;
+    if (!node.id) {
+      alert("Setting ID");
+      node.id = ++i;
+    }
     nodes.push(node);
   }
 
