--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -208,7 +208,7 @@ function update() {
   // Enter any new links.
   link.enter().insert("svg:line", ".node")
       .attr("class", "link")
-      .attr("x1", function(d) { return d.source.x; })
+      .attr("x1", function(d) { console.log("LINK ENTERED!"); return d.source.x; })
       .attr("y1", function(d) { return d.source.y; })
       .attr("x2", function(d) { return d.target.x; })
       .attr("y2", function(d) { return d.target.y; });
@@ -224,7 +224,7 @@ function update() {
   // Enter any new nodes.
   node.enter().append("svg:circle")
       .attr("class", "node")
-      .attr("cx", function(d) { return d.x; })
+      .attr("cx", function(d) { console.log("NODE ENTERED!"); return d.x; })
       .attr("cy", function(d) { return d.y; })
       .attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
       .style("fill", color)
