--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -203,7 +203,7 @@ function update() {
 
   // Update the links…
   link = vis.selectAll("line.link")
-      .data(links, function(d) { console.log("Assigning id to link "+d.target.id); return d.target.id; });
+      .data(links, function(d) { console.log("Assigning id to link "+d.target.id); return d.source.id + "-" + d.target.id; });
 
   // Enter any new links.
   link.enter().insert("svg:line", ".node")
@@ -234,27 +234,6 @@ function update() {
 
   // Exit any old nodes.
   node.exit().remove();
-
-/*
-  // Update the labels…
-  labels = vis.selectAll("text.label")
-      .data(nodes, function(d) { return d.id; });
-
-  // Enter any new labels.
-  labels.enter().append("svg:text")
-      .text(function(d) {return d.name})
-      .attr("class", "label")
-      .attr("x", function(d) { return d.x; })
-      .attr("y", function(d) { return d.y; })
-      .attr("text-anchor", "middle" )
-      .attr("font-family", "Arial, Helvetica, sans-serif")
-      .attr("font-size", "16px")
-      .attr("fill", "black");
-
-
-  // Exit any old nodes.
-  labels.exit().remove();
-*/
 }
 
 function tick() {
@@ -266,8 +245,6 @@ function tick() {
   node.attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; });
 
-  //labels.attr("x", function(d) { return d.x; })
-  //      .attr("y", function(d) { return d.y; });
 }
 
 // Color leaf nodes orange, and packages white or blue.
